# labs

./: .gitignore  DP  Factorization  README.md  blog.cpp  blog.h  blogsystem.cpp  blogsystem.h  date.cpp  date.h  exam.pro  mainwindow.cpp  mainwindow.ui  readme.md  source.cpp  source.h  test.h  time-tracking  topic.cpp  topic.h
lab1/: CMakeLists.txt  README.md  dice.cpp  dice.h  graph.h  graph.hxx  main.cpp
lab1.3/: main.cpp
lab1.8/: main.cpp
lab1/lib/googletest-master/googlemock/docs/: cook_book.md
lab1/lib/googletest-master/googletest/src/: gtest-port.cc
lab1/src/: dice.cpp  dice.h  graph.h  graph.hxx
lab1/tests/: test.h  test_dice.cpp  test_graph.cpp
lab2/: lab2.pro  main.cpp  mainwindow.h  mainwindow.ui  tab.h
lab2.2/: main.cpp
lab2.2/src/: RedBlackTree.hpp
lab2.2/tests/: rb_tree_test.cpp
lab2.3/: main.cpp
lab2.4/: data
lab2.5/tests/: test.hpp
lab2.6/: BPlusTree.tpp  main.cpp
lab2.6/tests/: test.hpp
lab2.7/: main.cpp
lab5/: main.cpp
oop/exam1/: blogsystem.h  date.h  exam.pro  mainwindow.cpp  source.cpp  source.h
oop/exam1/test/: CMakeLists.txt  main.cpp
oop/labs/: README.md
oop/labs/lab2/: note.h
oop/oop-labs/lab2/: tab.cpp
programming-basics/semester1/: MarkovAlgo
secondsemestr/: lab2a  main.cpp
secondsemestr/lab1/: main.cpp
secondsemestr/lab2/lab2a/: benchmark.txt  main.cpp
secondsemestr/lab2/lab2b/: skiplist.cpp
secondsemestr/lab2b/: cyclelist
secondsemestr/lab3/lab3a/: benchmark.txt  main.cpp
secondsemestr/lab4/: main.cpp
secondsemestr/lab5/: benchmark.txt  main.cpp
secondsemestr/lab6/: main.cpp
semester1-2/algorithms/: README.md
semester1-2/oop/exam1/: main.cpp  mainwindow.h
semester1-2/programming-basics/semester1/: QuadraticEquation
semester7/meta/lab1/: config.ini  game.py  main.py
semester7/meta/lab2/: generate_lib.py  lis.py  longest_increasing_subsequence.c  longest_increasing_subsequence.h  (+1 more)
task1/: CMakeLists.txt  Cargo.cpp  main.cpp
task1/Headers/: Cargo.h  Stock.h  TradeSystem.h  Transport.h
task1/Sources/: Cargo.cpp  Stock.cpp  TradeSystem.cpp  Transport.cpp  main.cpp
task1/Tests/: config  result
task2/: CMakeLists.txt
task2/Headers/: Function.h  Translate.hxx
task2/Sources/: main.cpp
task2/Test/: TestFunction.cpp  TestTranslate.cpp
task3/: CMakeLists.txt  main.cpp
task3/Headers/: Base1.h  Base2.h  Beta.h
task3/Sources/: Base1.cpp  Base2.cpp  Gamma.cpp
task3/Test/: Test.cpp
test/: testDate.cpp  testSystem.cpp
(+89 files in other folders)
